# taiwan-stock-ai

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  railway.toml  requirements.txt  run_and_sync.py
.github/workflows/: test.yml
dashboard/: app.py  db.py  loaders.py
dashboard/pages/: backtest.py  data_health.py  guide.py  my_trades.py  overview.py  position.py  reports.py
docs/: Architecture.md  Backtest.md  Collector.md  Deployment.md  DeveloperGuide.md  Engineering Refactor.md  Scoring.md  WalkForward.md  prd.md
scripts/: backfill_history.py  backfill_positions.py  import_financials.py  import_history.py  init_db.py  push_to_github.py  run_daily.py  sync_to_neon.py
src/: __init__.py  database.py  scheduler.py
src/ai/: claude_analyst.py
src/analyzers/: fundamental.py  market_behavior.py  risk.py  technical.py
src/collectors/: __init__.py  base.py  chip_collector.py  financial_collector.py  goodinfo_collector.py  mops_collector.py  news_collector.py  price_collector.py
src/core/: __init__.py  result.py
src/engines/: decision.py  hard_filter.py  monte_carlo.py  position_manager.py
src/reporters/: report_generator.py
src/services/: __init__.py  backtest_service.py  news_service.py  portfolio_service.py  recommend_service.py
src/validators/: data_validator.py
tests/: test_backtest.py  test_financial.py  test_loaders.py  test_price_collector.py  test_score.py
